[gd_scene load_steps=3 format=3 uid="uid://dvykinyfm52b2"]

[ext_resource type="FontFile" path="res://fonts/Built/Ubuntu_M_48tred.tres" id="1"]
[ext_resource type="Script" path="res://Scenes/SettingWindow/LayarSetting.gd" id="2"]

[node name="LayarSetting" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 50)
offset_top = 104.0
offset_right = 1198.0
offset_bottom = 167.0
size_flags_horizontal = 3
script = ExtResource("2")

[node name="FullSkren" type="CheckButton" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1")
text = "FullScreen"
expand_icon = true

[node name="Vsync" type="CheckButton" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1")
text = "Vsync"
expand_icon = true

[node name="VsyncCompositor" type="CheckButton" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1")
text = "Vsync Via Compositor"
expand_icon = true

[connection signal="visibility_changed" from="." to="." method="_on_LayarSetting_visibility_changed"]
[connection signal="toggled" from="FullSkren" to="." method="_on_FullSkren_toggled"]
[connection signal="toggled" from="Vsync" to="." method="_on_Vsync_toggled"]
[connection signal="toggled" from="VsyncCompositor" to="." method="_on_VsyncCompositor_toggled"]
